thêm trang quản lí đơn hàng

--- a/views/accounts/accountList.hbs
+++ b/views/accounts/accountList.hbs
@@ -13,6 +13,9 @@
                 <a href="/products"><i class="fa fa-desktop"></i> Danh sách sản phẩm</a>
             </li>
             <li>
+                <a href="/orders"><i class="fa fa-desktop"></i> Danh sách đơn hàng</a>
+            </li>
+            <li>
                 <a href="/information"><i class="fa fa-desktop"></i> Thông tin cửa hàng</a>
             </li>
         </ul>
