--- a/views/products/productList.hbs
+++ b/views/products/productList.hbs
@@ -12,6 +12,9 @@
                 <a href="/products" class="active-menu"><i class="fa fa-desktop"></i> Danh sách sản phẩm</a>
             </li>
             <li>
+                <a href="/orders"><i class="fa fa-desktop"></i> Danh sách đơn hàng</a>
+            </li>
+            <li>
                 <a href="/information"><i class="fa fa-desktop"></i> Thông tin cửa hàng</a>
             </li>
         </ul>
